<resources>
    <string name="app_name">The News App</string>
<!--    <string name="title_activity_news">news</string>-->
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Always Stay Updated</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_latest">Latest</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_world">World</string>
    <string name="menu_science">Science</string>
    <string name="menu_environment">Environment</string>
    <string name="menu_business">Business</string>
    <string name="menu_fashion">Fashion</string>
    <string name="category">Category</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about">The NEWS app makes it easier for you to stay up to date with the latest news and information from World most trusted news source. Download it now by tapping below on the relevant app store button for you.</string>

</resources>
