<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_new"
            android:title="@string/menu_latest" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_science" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/menu_about" />
    </group>
</menu>